<resources>
    <string name="app_name">聚宝籍</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="author">韩寒（1982年9月23日－），出生于中国大陆上海金山。中国大陆作家，职业拉力赛及场地赛车手，《独唱团》杂志（现已停刊）、《一个》app主编，并涉足音乐、电影创作。电影代表作：《后会无期》。2010年，韩寒被《时代周刊》评选为100名影响世界人物之一。</string>

    <string name="essay">史上最全WebView使用，附送Html5Activity一份
如果本文帮助到你，本人不胜荣幸，如果浪费了你的时间，本人深感抱歉。
希望用最简单的大白话来帮助那些像我一样的人。如果有什么错误，请一定指出，以免误导大家、也误导我。
本文来自：http://www.jianshu.com/users/320f9e8f7fc9/latest_articles
感谢您的关注。
WebView在现在的项目中使用的频率应该还是非常高的。
我个人总觉得HTML5是一种趋势。找了一些东西，在此总结。
本篇最后有一个非常不错 的 Html5Activity 加载类，不想看的可以直接跳下载。</string>

    <string name="detail">和田玉（Nephrite）是软玉的一种（俗称真玉），也是国内高端具有领创品牌的软玉[1]  。和田玉分“狭义”和“广义”两种定义。“狭义”（传统概念）范畴特指新疆和田地区出产的玉石，以和田“子料”为代表闻名于世。“广义“范畴并非特指新疆和田地区出产的玉，”和田玉“逐渐被冠名为一类产品的名称。</string>
    <string name="login">登录</string>
    <string name="input_number">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="signup">注册</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="input_code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="resetpwd">找回密码</string>
    <string name="input_newpwd">输入新密码</string>
    <string name="outapp">再按一次退出程序</string>
    <string name="clause"><Data><![CDATA[注册即为同意本公司<font color="#6495ed"><b>服务条款</b></font>，本应用最终解释权归【杭州集特网络科技有限公司】所有。]]></Data></string>
    <string name="clause_title">服务条款</string>
    <string name="clause_content">服务条款\n\n

杭州集特网络科技有限公司（"集特网络"、"我们"、"我方"或"我们的"）授权您使用本网站（"网站"）以及聚宝集App（App），但您须遵守下列使用条款和条件（"服务条款"或"协议"）。请仔细阅读本使用条款。\n\n

访问本网站，下载 聚宝集App即表示您同意受本使用条款的约束。如果您不愿意受本使用条款的约束，请不要访问或使用本网站、聚宝集App。\n\n

许可证\n\n

本网站、App的内容由杭州集特网络科技有限公司拥有和运营。在本网站、APP上提供的所有文件和其他用户所分享的信息与内容（"网站内容"）均受全世界版权法律的保护。任何复制品上必须保留有关任何网站、App内容的所有版权和其他专有声明。严禁未经授权对任何网站、App内容进行复制、修改、散布或演绎。供应商保留所有未在本使用条款中明确授予的权利。\n\n

商标\n\n

"聚宝集"及本网站、App上所使用的其他相关的图表、标识、服务标志和商业名称都属于杭州集特网络科技有限公司所有，未经许可不得用于与任何第三方产品或服务相关的活动中。\n\n

网站、App上出现的其他商标、服务标志和商业名称均为其各自所有者的财产。\n\n

修改\n\n

1）我们保留在发出或不发出通知的情况下，随时修改网站、App内容或修改、暂停或停用本网站、App或其中任何一部分内容的权利。\n\n

2）集特网络不会因对任何网站、App内容，修改、暂停或停用本网站、App而对您或任何第三方追究责任。\n\n

反馈\n\n

集特网络会将您向我们提供的任何反馈或建议作为非机密和非专有信息来处理。因此，如果您没有与集特网络签订其他书面协议，则您在此将您向集特网络提供任何反馈或建议的所有权利转让给集特网络。\n\n

安全与隐私\n\n

1）您有责任妥善保存你的密码。\n\n

禁止内容\n\n

禁止使用本网站进行任何非法或者未经授权的行为。使用本网站和App，您必须遵守任何和全部的中华人民共和国适用法律、法规和行为守则，国际用户同意遵守当地有关约束互联网行为和内容的法律。

第三方链接

本网站、App可能包含由第三方运营的其他网站的链接，此类第三方网站不受集特网络的控制。集特网络不对任何第三方网站的内容或第三方网站中包含的任何链接负责。集特网络提供这些链接仅便于使用者参考，并不审查、批准、监控、认可、担保第三方网站之内容，亦不对其做任何声明。\n\n

责任范围\n\n

对于由本网站，App引起或与之相关的任何间接、偶然、特殊、典型或后果性损害，包括但不限于由于无法使用、数据丢失或利润损失而导致的任何损害。无论公司是否已被告知发生此类损害的可能性或接到任何关于责任理论的建议，公司概不承担责任。除按照销售条款执行的情况外，关于合同、侵权行为或其他任何情况，公司对于与本使用条款、网站、或网站内容相关的累积责任赔偿总额不超过200人民币。\n\n

条款的修订\n\n

集特网络可以随时通过更新本发布内容来修订本使用条款。 使用本网站，即表示您同意受这些修订的约束，并且应该定期访问网站的这一页面来查看最新的使用条款。本使用条款的某些规定可能被本网站中特定页面上明确指定的法律通告或条款所取代。\n\n

版权声明\n\n

1）除了可识别的个人信息之外，任何您在此网站上公布的资料都将视为非机密和非专有的。我们对该类资料将不承担责任。\n\n

2）我们和我们指定的人员可自由复制、披露、散布、整合和以其他方式使用该类资料和所有数据、图像、声音、文本和其中包含的其他内容，以用作任何和全部商业或非商业目的。\n\n

3）聚宝集有权审查并删除任何内容、邮件、照片或文本（统称为"内容"），只要聚宝集经过合理判断，认为该类内容违反了本协议，或具有攻击性、违法性，或侵犯了他人权利，或损害、威胁了用户安全。\n\n

4）您声明并保证您在任何时候公布的内容是（a）未违反本协议；（b）不会伤害到任何其他人。\n\n

5）通过将内容发布到聚宝集的公共区域，表示您同意、自动授予，并且保证您有权授予聚宝集一项不可取消的、永久的、非独占的、完全免费的、世界范围的许可，以使用、复制、执行、显示并散布该类信息和内容，也可准备该类信息和内容的衍生作品或整合到其他作品中，以及授予上述权利的再授权。\n\n

11.其他条款\n\n

1）如果本使用条款中的任何规定因任何原因而无效或无法执行，则本使用条款中的其他规定将不受影响，而无效或无法执行的条款将在法律允许的范围内最大程度地加以修改以确保有效且可执行。\n\n

2）本使用条款及与之相关的任何行为都将受到中华人民共和国的管辖和控制，并按照中华人民共和国法律来解释和定义，任何要求适用其他司法管辖区法律的原则均无效。\n\n

3）使用本网站，即表示您明确同意属人管辖权和审判地归属于中华人民共和国，并且同意您依据本使用条款所提起的任何诉讼主张仅能提交本国法院受理，不得提交任何境外法院。\n\n

如果您对上述内容有任何疑问，请通过以下电子邮箱联系我们：panc@jvbaoji.com。\n\n

Copyright © 2014-1015 集特网络 版权所有</string>
    <string name="tv_order_form">拍卖订单</string>
    <string name="status0">等待付款</string>
    <string name="status1">付款成功</string>
    <string name="status2">超时未付款</string>
    <string name="setting">设置</string>
    <string name="personal_setting">个人设置</string>
    <string name="suggest">意见反馈</string>
    <string name="about">关于聚宝籍</string>
    <string name="appraise">去商店评价</string>
    <string name="update">检查更新</string>
    <string name="head">头像</string>
    <string name="name">昵称</string>
    <string name="sex">性别</string>
    <string name="signature">个性签名</string>
    <string name="mainaddress">常住</string>
    <string name="manage_address">地址管理</string>
    <string name="sava_change">保存修改</string>
    <string name="savaed">已保存</string>
    <string name="input_suggest">在此输入您的建议或者意见</string>
    <string name="push">提交</string>
    <string name="webpage">www.jvbaoji.com</string>
    <string name="version">聚宝籍1.1</string>
    <string name="company">Copyright ⓒ 2014-2015 杭州集特网络</string>
    <string name="declare">All Right Reserved</string>
    <string name="mymsg">我的消息</string>
    <string name="headImage">http://ac-tv2pl6bu.clouddn.com/6qHjxSn5R6PcSDfFulfsKTT57VLU4bnC0eZwIJxm.jpg</string>
    <string name="url_share">http://www.jvbaoji.com/mobile/download.html</string>
    <string name="its_signature">聚各式书画成卷，收各样宝器成册，汇各种藏品成集</string>
    <string name="update_id">101076b053</string>

</resources>
