<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bggray"
    tools:context="demand.example.tyhj.jubao.SignUp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation3x"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingTop="25dip"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="18dp"
            android:src="@drawable/ic_back_left" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.59"
            android:gravity="center"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent" />
    </LinearLayout>


    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/input_number"
        android:inputType="number"
        android:lines="1"
        android:padding="10dp"
        android:textSize="16sp" />

    <EditText
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:hint="@string/input_pwd"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/input_code"
            android:inputType="number"
            android:lines="1"
            android:padding="10dp"
            android:textSize="16sp" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/button_log"
            app:cardCornerRadius="5dp">

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:text="@string/get_code"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/button_log"
        app:cardCornerRadius="5dp">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/next"
            android:textColor="@color/white" />

    </android.support.v7.widget.CardView>


    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/clause"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
