<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bggray"
    tools:context="demand.example.tyhj.jubao.Setting"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation3x"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingTop="25dip"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="18dp"
            android:src="@drawable/ic_back_left" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_personal_setting"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_personal_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/personal_setting"
            android:textSize="17sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        
        <ImageView
            android:src="@drawable/ic_right_arrow"
            android:id="@+id/iv_personal_setting"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_suggest"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/suggest"
            android:textSize="17sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:src="@drawable/ic_right_arrow"
            android:id="@+id/iv_suggest"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_about"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/about"
            android:textSize="17sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:src="@drawable/ic_right_arrow"
            android:id="@+id/iv_about"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_appraise"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_appraise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/appraise"
            android:textSize="17sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:src="@drawable/ic_right_arrow"
            android:id="@+id/iv_appraise"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:id="@+id/ll_update"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <TextView
            android:id="@+id/tv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/update"
            android:textSize="17sp" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <ImageView
            android:src="@drawable/ic_right_arrow"
            android:id="@+id/iv_update"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/button_log"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="退出登录"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </android.support.v7.widget.CardView>



</LinearLayout>
