<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bggray"
    android:orientation="vertical"
    tools:context="demand.example.tyhj.jubao.Suggest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigation3x"
        android:elevation="4dp"
        android:orientation="horizontal"
        android:paddingTop="25dip"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="7dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="18dp"
            android:src="@drawable/ic_back_left" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/suggest"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/input_suggest"
            android:gravity="start"
            android:maxLength="150"
            android:textSize="16sp"
            android:padding="15dp"
            android:background="@color/white"
            android:id="@+id/et_suggest"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <TextView
            android:padding="10dp"
            android:text="0/150"
            android:gravity="right|center_vertical"
            android:textSize="14sp"
            android:background="@color/white"
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <android.support.v7.widget.CardView
            app:cardBackgroundColor="@color/button_log"
            app:cardCornerRadius="8dp"
            android:layout_margin="20dp"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:text="@string/push"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:id="@+id/btn_push"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>

    </LinearLayout>



</LinearLayout>
